# patience-sort-rust

./: .gitignore  .gitmodules  Cargo.toml  Makefile
bench/: bin.rs
src/: lib.rs  patience-sort.rs  patience.rs  patience_sort.rs
